Fixes z-index to flash messages

--- a/app/assets/stylesheets/components/_flash.scss
+++ b/app/assets/stylesheets/components/_flash.scss
@@ -1,7 +1,7 @@
 .flash {
   font-size: 26px;
   color: white;
-  z-index: 500;
+  z-index: 3000;
   position: fixed;
   bottom: 0;
   width: 100%;
